# zhasher

./: CMakeLists.txt  Dockerfile  LICENSE_MIT  README.md
contrib/: cuda-repo-ubuntu1604_9.2.88-1_amd64.deb
cpu_tromp/: equi.h  equi_miner.h  equi_miner2.h
cuda_djezo/: eqcuda.hpp  equi_miner.cu
cuda_tromp/: equi.h  equi_miner.cu
zhasher/: main.cpp  version.h  zhasher.sln  zhasher.vcxproj
zhasher/compat/: endian.h
zhasher/libstratum/: ZcashStratum.cpp
